# SDL2-game-experiment

./: .gitignore  CMakeLists.txt  GhostHunter.sublime-project  Makefile  README.md
src/: AreaState.cpp  CMakeCache.txt  CMakeLists.txt  StateEngine.cpp  StateEngine.h  Timer.cpp  Timer.h  TitleState.cpp  Util.cpp  Util.h  main.cpp
src/engine/: StateEngine.cpp  StateEngine.h
src/lib/: Timer.cpp  Util.h
src/states/: AreaState.cpp  TitleState.cpp
